--- a/SmartCardLibrary/build.gradle
+++ b/SmartCardLibrary/build.gradle
@@ -41,3 +41,17 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
+
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+
+                groupId = 'com.github.Tompote'
+                artifactId = 'SmartCardLibrary'
+                version = '0.2.0'
+            }
+        }
+    }
+}
