--- a/SmartCardLibrary/build.gradle
+++ b/SmartCardLibrary/build.gradle
@@ -26,8 +26,8 @@ android {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
     }
-    kotlinOptions {
-        jvmTarget = '1.8'
+    kotlin {
+        jvmToolchain(17)
     }
 }
 
